--- a/main.html
+++ b/main.html
@@ -8,6 +8,29 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form>
+		<label for="name">Name</label>
+		<input type="text" id="name" required>
+		<label for="emil">Email</label>
+		<input type="email" id="email" required>
+		<label for="gendr">Gender</label>
+		<input type="radio" id="gender" name="gender"required>m
+		<input type="radio" id="gender"    name="gender"required>f
+		<label for="cars">Car Brands</label>
+		<select id="cars">
+			<option>BMW</option>
+			<option>Audi</option>
+			<option>Mercedez</option>
+		</select>
+		<label for="carage">Car Age</label>
+		<input type="number" id="carahe" required>
+		<label for="dop">Date of Purchase (dop)</label>
+		<input type="date" id="dop" required>
+		<label for="password	">Password</label>
+		<input type="password" id="password">
+		<input type="submit" >
+		
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
