--- a/main.html
+++ b/main.html
@@ -8,10 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<form>
+	<form  method="post">
 		<label for="name">Name</label>
 		<input type="text" id="name" required>
-		<label for="emil">Email</label>
+		<label for="email">Email</label>
 		<input type="email" id="email" required>
 		<label for="gendr">Gender</label>
 		<input type="radio" id="gender" name="gender"required>m
@@ -27,7 +27,7 @@
 		<label for="dop">Date of Purchase (dop)</label>
 		<input type="date" id="dop" required>
 		<label for="password	">Password</label>
-		<input type="password" id="password">
+		<input type="password" id="password" required>
 		<input type="submit" >
 		
 	</form>
