--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
 		<input type="date" id="dop" required>
 		<label for="password	">Password</label>
 		<input type="password" id="password" required>
-		<input type="submit" >
+		<button type="submit"> 
 		
 	</form>
     <script type="text/javascript" src="./script.js">
