--- a/main.html
+++ b/main.html
@@ -23,11 +23,11 @@
 			<option>Mercedez</option>
 		</select>
 		<label for="carage">Car Age</label>
-		<input type="number" id="carahe" required>
+		<input type="number" id="carage" required>
 		<label for="dop">Date of Purchase (dop)</label>
 		<input type="date" id="dop" required>
-		<label for="password	">Password</label>
-		<input type="password" id="password" required>
+		<label for="Password	">Password</label>
+		<input type="password" id="Password" required>
 		<button type="submit"> 
 		
 	</form>
