--- a/main.html
+++ b/main.html
@@ -13,9 +13,10 @@
 		<input type="text" id="name" required>
 		<label for="email">Email</label>
 		<input type="email" id="email" required>
-		<label for="gendr">Gender</label>
-		<input type="radio" id="gender" name="gender"required>m
-		<input type="radio" id="gender"    name="gender"required>f
+		<label for="gender_m">M</label>
+		<input type="radio" id="gender_m" name="gender"required>
+		<label for="gender_f">F</label>
+		<input type="radio" id="gender_f"    name="gender"required>
 		<label for="cars">Car Brands</label>
 		<select id="cars">
 			<option>BMW</option>
